--- a/index.html
+++ b/index.html
@@ -5,6 +5,170 @@
         <title>HOME</title>
     </head>
     <body>
-        <h1>WISLEY</h1>
+        <header>
+            <section> 
+                <figure>
+                    <img src="./assests/images/IFood_logo.svg.png" alt="Logo do Ifood">
+                </figure>
+                <ul>
+                    <li><a href="#">Restaurante</a></li>
+                    <li><a href="#">Bebidas</a></li>
+                    <li><a href="#">Farmácia</a></li>
+                    <li><a href="#">Express</a></li>
+                    <li><a href="#">Pets</a></li>
+                </ul>
+
+                <figure>
+                    <img src="" alt="Buscar no site">
+                </figure>
+
+                <div>
+                    <p>R. Rio Piracicaba, 141</p>
+                    <figure>
+                        <img src="" alt="Imagem de Avatar">
+                    </figure>
+                </div>    
+                <div> 
+                    <p>R$ 0,00</p>
+                </div>
+            </section>
+            <section>
+                <ul>
+                    <li>Ordenar</li>
+                    <li>Para retirar</li>
+                    <li>Entrega Grátis</li>
+                    <li>Vale-Refeição</li>
+                    <li>Distância</li>
+                    <li>Entrega Parceira</li>
+                    <li>Super Restaurantes</li>
+                    <li>Filtros</li>
+                    <li>Limpar</li>
+                </ul>
+            </section>
+        </header>
+        <main>
+            <section>
+                <ul>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Mercado.jpg" alt="Icone de Mercado">
+                            <p>Mercado</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Lanches.jpg" alt="Icone de Lanche">
+                            <p>Lanche</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Cafeteria.jpg" alt="Icone de Cafeteria">
+                            <p>Cafeteria</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Salgados.jpg" alt="Icone de Salgados">
+                            <p>Salgados</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Padaria.jpg" alt="Icone de Padaria">
+                            <p>Padaria</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Pizza.jpg" alt="Icone de Pizzaria">
+                            <p>Pizzaria</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Vegetariana.jpg" alt="Icone de Vegetariana">
+                            <p>Vegetariana</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Marmita.jpg" alt="Icone de Marmita">
+                            <p>Marmita</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Pastel.jpg" alt="Icone de Pastel">
+                            <p>Pastel</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/Acai.jpg" alt="Icone de Açai">
+                            <p>Açai</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones/conveniencia.png" alt="Icone de Conveniência">
+                            <p>Conveniência</p>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <ul>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/1anodeifoodprincipalgenericarestaurante.png" alt="Banner 1">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/BasicosDespensa50offYellowFoodsPrincipal.png" alt="Banner 2">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/TudoQoBrasileiroAmaPrincipal.png"alt="Banner 3">
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Últimas Lojas</h2>
+                <ul>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/racas.png" alt="Icone da Loja1">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/hamburgueria.png"  alt="Icone da Loja2">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/senna.png"  alt="Icone da Loja3">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/sushi1.png"  alt="Icone da Loja4">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/paap.png"  alt="Icone da Loja5">
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer>
+
+        </footer>
     </body>
 </html>
