--- a/teste.html
+++ b/teste.html
@@ -2,49 +2,180 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>MEU PRIMEIRO</title>
+        <link rel="stylesheet" href="./assests/css/reset.css">
+        <link rel="stylesheet" href="teste.css">
+        <title>HOME</title>
     </head>
     <body>
-        <header>
-            cabeçalho
-        </header>
-        <Main>
-            <section>
-                
-                <div>
-                    <h1>Criando meu site</h1>
-                </div>
-                <div>
-                    <p>Qualquer coisa.</p>
-                    <p>Qualquer coisa de novo.</p>
-                </div>
-            </section>
-            <section>
-                <ul> 
-                    <li>Primeiro item</li>
-                    <li>Segundo item</li>
+        <header class="cabecalho">
+            <section class="cabecalho_principal">  
+                <figure class="logo_ifood">
+                    <img src="./assests/images/IFood_logo.svg.png" alt="Logo do Ifood">
+                </figure>
+                <ul class="lista_tipos_estabelecimentos">
+                    <li class="item_estabelecimento"><a href="#">Restaurante</a></li>
+                    <li class="item_estabelecimento"><a href="#">Bebidas</a></li>
+                    <li class="item_estabelecimento"><a href="#">Farmácia</a></li>
+                    <li class="item_estabelecimento"><a href="#">Express</a></li>
+                    <li class="item_estabelecimento"><a href="#">Pets</a></li>
                 </ul>
 
-                <ol>
-                    <li>Ordem 1</li>
-                    <li>Ordem 2</li>
-                    <li>Ordem 3</li>
-                </ol>
-            </section>
-            <section>
-                <!-- Mais vantagens de usa VSCODE-->
-                <a href="https://g1.globo.com/"> Clique aqui </a>
-                <br/>
                 <figure>
-                    <img src="./assests/images/icones/Acai.jpg">
-                    <figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
+                    <img src="" alt="Buscar no site">
                 </figure>
-                <br/>
-                <hr/>
+
+                <div>
+                    <p>R. Rio Piracicaba, 141</p>
+                    <figure>
+                        <img src="" alt="Imagem de Avatar">
+                    </figure>
+                </div>    
+                <div> 
+                    <p>R$ 0,00</p>
+                </div>
             </section>
-        </Main>
+            <section class="segundo_cabecalho">
+                <ul class="lista_filtros">
+                    <li class="item_filtro"><button>Ordenar</button></li>
+                    <li class="item_filtro"><button>Para retirar</button></li>
+                    <li class="item_filtro"><button>Entrega Grátis</button></li>
+                    <li class="item_filtro"><button>Vale-Refeição</button></li>
+                    <li class="item_filtro"><button>Distância</button></li>
+                    <li class="item_filtro"><button>Entrega Parceira</button></li>
+                    <li class="item_filtro"><button>Super Restaurantes</button></li>
+                    <li class="item_filtro"><button>Filtros</button></li>
+                    <li class="item_filtro"><button>Limpar</button></li>
+                </ul>
+            </section>
+        </header>
+        <main>
+            <section class="estabelecimentos_categorias">
+                <ul class="lista_categorias_estabelecimentos">
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Mercado.jpg" alt="Icone de Mercado">
+                            <p>Mercado</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Lanches.jpg" alt="Icone de Lanche">
+                            <p>Lanche</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Cafeteria.jpg" alt="Icone de Cafeteria">
+                            <label>Cafeteria</label>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Salgados.jpg" alt="Icone de Salgados">
+                            <p>Salgados</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Padaria.jpg" alt="Icone de Padaria">
+                            <p>Padaria</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Pizza.jpg" alt="Icone de Pizzaria">
+                            <p>Pizzaria</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Vegetariana.jpg" alt="Icone de Vegetariana">
+                            <p>Vegetariana</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Marmita.jpg" alt="Icone de Marmita">
+                            <p>Marmita</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Pastel.jpg" alt="Icone de Pastel">
+                            <p>Pastel</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/Acai.jpg" alt="Icone de Açai">
+                            <p>Açai</p>
+                        </figure>
+                    </li>
+                    <li class="item_lista_categoria">
+                        <figure>
+                            <img src="./assests/images/icones/conveniencia.png" alt="Icone de Conveniência">
+                            <p>Conveniência</p>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+            <section class="sessaco_banners">
+                <ul class="lista_banners">
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/1anodeifoodprincipalgenericarestaurante.png" alt="Banner 1">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/BasicosDespensa50offYellowFoodsPrincipal.png" alt="Banner 2">
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/banner/TudoQoBrasileiroAmaPrincipal.png"alt="Banner 3">
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+            <section class="sessao_ultimas_lojas">
+                <h2>Últimas Lojas</h2>
+                <ul class="lista_lojas">
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/racas.png" alt="Icone da Loja1">
+                            <p>Racas</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/hamburgueria.png"  alt="Icone da Loja2">
+                            <p>Made in China</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/senna.png"  alt="Icone da Loja3">
+                            <p>Pizza Senna</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/sushi1.png"  alt="Icone da Loja4">
+                            <p>Tadamachi</p>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
+                            <img src="./assests/images/icones_restaurantes/paap.png"  alt="Icone da Loja5">
+                            <p>Papa Burger</p>
+                        </figure>
+                    </li>
+                </ul>
+            </section>
+        </main>
         <footer>
-            rodapé
+
         </footer>
     </body>
 </html>
