--- a/index.html
+++ b/index.html
@@ -2,47 +2,49 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="./assests/css/reset.css">
+        <link rel="stylesheet" href="./assests/css/estilo.css">
         <title>HOME</title>
     </head>
     <body>
         <header>
-            <section> 
-                <figure>
+            <section class="cabecalho1"> 
+                <figure class="figure_cabecalho1">
                     <img src="./assests/images/IFood_logo.svg.png" alt="Logo do Ifood">
                 </figure>
-                <ul>
-                    <li><a href="#">Restaurante</a></li>
-                    <li><a href="#">Bebidas</a></li>
-                    <li><a href="#">Farmácia</a></li>
-                    <li><a href="#">Express</a></li>
-                    <li><a href="#">Pets</a></li>
+                <ul class="lista_cabecalho1">
+                    <li class="item_lista_cabecalho1"><a href="#">Restaurante</a></li>
+                    <li class="item_lista_cabecalho1"><a href="#">Bebidas</a></li>
+                    <li class="item_lista_cabecalho1"><a href="#">Farmácia</a></li>
+                    <li class="item_lista_cabecalho1"><a href="#">Express</a></li>
+                    <li class="item_lista_cabecalho1"><a href="#">Pets</a></li>
                 </ul>
 
-                <figure>
+                <figure class="figure_busca_site">
                     <img src="" alt="Buscar no site">
                 </figure>
 
-                <div>
+                <div class="endereco">
                     <p>R. Rio Piracicaba, 141</p>
-                    <figure>
+                    <figure class="avatar">
                         <img src="" alt="Imagem de Avatar">
                     </figure>
                 </div>    
-                <div> 
+                <div class="saldo"> 
                     <p>R$ 0,00</p>
                 </div>
             </section>
-            <section>
-                <ul>
-                    <li>Ordenar</li>
-                    <li>Para retirar</li>
-                    <li>Entrega Grátis</li>
-                    <li>Vale-Refeição</li>
-                    <li>Distância</li>
-                    <li>Entrega Parceira</li>
-                    <li>Super Restaurantes</li>
-                    <li>Filtros</li>
-                    <li>Limpar</li>
+            <section class="cabecalho2">
+                <ul class="lista_cabecalho2">
+                    <li class="item_lista_cabecalho2">Ordenar</li>
+                    <li class="item_lista_cabecalho2">Para retirar</li>
+                    <li class="item_lista_cabecalho2">Entrega Grátis</li>
+                    <li class="item_lista_cabecalho2">Vale-Refeição</li>
+                    <li class="item_lista_cabecalho2">Distância</li>
+                    <li class="item_lista_cabecalho2">Entrega Parceira</li>
+                    <li class="item_lista_cabecalho2">Super Restaurantes</li>
+                    <li class="item_lista_cabecalho2">Filtros</li>
+                    <li class="item_lista_cabecalho2">Limpar</li>
                 </ul>
             </section>
         </header>
