--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./assests/css/reset.css">
         <link rel="stylesheet" href="./assests/css/estilo.css">
-        <title>HOME</title>
+        <title>HOME 1</title>
     </head>
     <body>
         <header>
