--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
             </section>
             <section class="cabecalho2">
                 <ul class="lista_cabecalho2">
-                    <li class="item_lista_cabecalho2">Ordenar</li>
-                    <li class="item_lista_cabecalho2">Para retirar</li>
-                    <li class="item_lista_cabecalho2">Entrega Grátis</li>
-                    <li class="item_lista_cabecalho2">Vale-Refeição</li>
-                    <li class="item_lista_cabecalho2">Distância</li>
-                    <li class="item_lista_cabecalho2">Entrega Parceira</li>
-                    <li class="item_lista_cabecalho2">Super Restaurantes</li>
-                    <li class="item_lista_cabecalho2">Filtros</li>
-                    <li class="item_lista_cabecalho2">Limpar</li>
+                    <li class="item_lista_cabecalho2"><button> Ordenar </button></li>
+                    <li class="item_lista_cabecalho2"><button>Para retirar</button></li>
+                    <li class="item_lista_cabecalho2"><button>Entrega Grátis</button></li>
+                    <li class="item_lista_cabecalho2"><button>Vale-Refeição</button></li>
+                    <li class="item_lista_cabecalho2"><button>Distância</button></li>
+                    <li class="item_lista_cabecalho2"><button>Entrega Parceira</button></li>
+                    <li class="item_lista_cabecalho2"><button>Super Restaurantes</button></li>
+                    <li class="item_lista_cabecalho2"><button>Filtros</button></li>
+                    <li class="item_lista_cabecalho2"><button>Limpar</button></li>
                 </ul>
             </section>
         </header>
