--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
                 </div>
             </section>
             <section class="cabecalho2">
+               
+                
                 <ul class="lista_cabecalho2">
                     <li class="item_lista_cabecalho2"><button> Ordenar </button></li>
                     <li class="item_lista_cabecalho2"><button>Para retirar</button></li>
@@ -49,7 +51,7 @@
             </section>
         </header>
         <main>
-            <section>
+            <section class="lista_opcoes">
                 <ul>
                     <li>
                         <figure>
@@ -119,7 +121,7 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section class="banners">
                 <ul>
                     <li>
                         <figure>
