--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </li>
                 </ul>
             </section>
-            <section>
+            <section class="ultimas_lojas">
                 <h2>Últimas Lojas</h2>
                 <ul>
                     <li>
